<resources>
    <string name="app_name">Lyrica</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="gallery">Gallery</string>
    <string name="artists">Artists</string>
    <string name="creations">Creations</string>
    <string name="search">Search…</string>


</resources>
