<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

    <item
            android:id="@+id/navigation_add"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_photo_filter_black_24dp"
            android:title="@string/creations" />

    <item
            android:id="@+id/navigation_near_of_me"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/gallery" />
    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>
</menu>